--- a/style.css
+++ b/style.css
@@ -1,20 +1,30 @@
 html{
     scroll-behavior: smooth;
-    background-image: url("modern-clean-white-background-free-vector.jpg");
+    /* background-image: url("modern-clean-white-background-free-vector.jpg"); */
+    background-color: #FCF5E5;
     font-family: 'Courier New', Courier, monospace;
 }
 
 body{
     text-align: center;
+    font-size: 2vm;
+    margin: 0;
+    padding: 0;
 }
 
 
 .headline a{
-    list-style-position: inside;
     text-decoration: none;
-    margin-right: 10%;
     color: black;
-    font-size: large;
+    font-size: 1.25vw;
+    /* padding: 0% 10%; */
+}
+
+.section a{
+    text-decoration: none;
+    color: black;
+    font-size: 1.2vw;
+
 }
 
 
@@ -24,18 +34,76 @@ a:hover{
 
 .headline{
     text-align: center; 
+    font-size: 1.25vw;
 }
 
 .rounded {
-    object-fit: cover;
-    border-radius: 50%;
-    height: 200px;
-    width: 200px;
+    /* object-fit: cover; */
+    /* border-radius: 50%; */
+    height: 10%;
+    width: 10%;
 }
 
 .abbreviated{
     font-weight:1000;
+    padding: 0% 10%;
+    font-size: 1.25vw;
 }
 
 
+.section h3{
+    text-decoration: underline;
+    font-size: 2.5vw;
+}
 
+.section {
+    font-size: 1.25vw;
+    padding: 0% 10%;
+}
+
+.smallimage{
+    height:0%;
+    width: 100%;
+}
+
+
+.menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: inline-block;
+    border: 0.2vw solid black; 
+}
+
+.menu > a {
+    text-decoration: none;
+    font-size: clamp(1rem, 2vw, 2rem);
+    padding: clamp(0.5rem, 1vw, 1.5rem) clamp(1rem, 2vw, 2rem);
+    background-color: #FCF5E5;
+    color: black;
+    display: block;
+}
+
+.dropdown {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    min-width: 10rem; /* Works well with rem scaling */
+}
+
+.dropdown a {
+    text-decoration: none;
+    font-size: clamp(0.9rem, 1.5vw, 1.2rem);
+    padding: clamp(0.5rem, 1vw, 1rem);
+    display: block;
+    color: black;
+}
+
+.dropdown a:hover {
+    background-color: #ddd;
+}
+
+.menu:hover .dropdown {
+    display: block;
+}
